@@ -1,5 +1,10 @@
 2011-11-23 Stefan Bidigaray <stefanbidi@gmail.com>
 
+	* Source/GNUmakefile: 
+	* Source/NSCFArray.m: Objective-C class for CFArray.
+
+2011-11-23 Stefan Bidigaray <stefanbidi@gmail.com>
+
 	* Source/CFNumber.c: Remove unneeded #if statement.
 	* Source/CFNumberFormatter.c: Simplify SetProperty and 
 	CopyProperty functions.
